fix dashboard qr camera z-index

--- a/src/assets/scss/md/_buttons.scss
+++ b/src/assets/scss/md/_buttons.scss
@@ -320,3 +320,7 @@
     margin-right: 0;
   }
 }
+
+.md-fab, .md-icon-button {
+  z-index: 1;
+}
